finish product-page

--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -8,8 +8,10 @@
   <div class="modal-content">
     <div class="slideshow">
       <img src="../../../assets/images/people.jpg" />
-      <div class="arrow"><span>&#x3c;</span></div>
-      <div class="arrow"><span>&#x3e;</span></div>
+      <!--<div class="arrow"><span>&#x3c;</span></div>-->
+      <!--<div class="arrow"><span>&#x3e;</span></div>-->
+      <i class="material-icons">keyboard_arrow_left</i>
+      <i class="material-icons">keyboard_arrow_right</i>
     </div>
     <div class="product-info">
       <div class="menu">
