--- a/src/app/pages/our-product-page/our-product-page.component.html
+++ b/src/app/pages/our-product-page/our-product-page.component.html
@@ -11,7 +11,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
         <a href="#" class="more"><button>
           <span>Discover Crown-Baele products</span>
-          <span>&nbsp;&#x3e;</span>
+          <i class="material-icons">keyboard_arrow_right</i>
         </button></a>
       </div>
       <div class="triangle"></div>
@@ -22,11 +22,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
         <a href="#" class="more">
           <button>
-            <span>&#x3c;&nbsp;</span>
+            <i class="material-icons">keyboard_arrow_left</i>
             <span>Discover 3rd party products</span>
           </button>
         </a>
       </div>
+      <div class="triangle"></div>
     </div>
   </div>
 </section>
