--- a/src/app/pages/our-product-page/our-product-page.component.scss
+++ b/src/app/pages/our-product-page/our-product-page.component.scss
@@ -34,6 +34,9 @@
                 .content {
                     background-color: $footer-color;
                 }
+                .triangle {
+                    border-color: $footer-color transparent transparent transparent;
+                }
             }
             &:nth-child(2n) {
                 .content {
@@ -48,6 +51,9 @@
                         }
                     }
                 }
+                .triangle {
+                    border-color: white transparent transparent transparent;
+                }
             }
 
             .triangle {
@@ -55,7 +61,6 @@
                 height: 0;
                 border-style: solid;
                 border-width: 40px 100vw 0 0;
-                border-color: $footer-color transparent transparent transparent;
             }
         }
     }
