Fixed empty body bug + added info section to contact

--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -7,13 +7,15 @@
 
     <div class="contact-content">
         <div class="contact-form">
+
+
             <mat-card>
                 <mat-card-header>
                     <h2>Contact us by mail</h2>
                 </mat-card-header>
                 <mat-card-content class="px-lg-5 pt-0">
 
-                    <form #form method="post" style="color: #757575;" [formGroup]="contactForm" enctype="text/plain" method="post">
+                    <form #form method="post" style="color: #757575;" [formGroup]="contactForm">
 
                         <div>
                             <mat-form-field appearance="standard">
@@ -34,7 +36,7 @@
                         <div>
                             <mat-form-field appearance="standard">
                                 <mat-label>Subject</mat-label>
-                                <input type="text" matInput placeholder="Subject"formControlName="subject">
+                                <input type="text" matInput placeholder="Subject" formControlName="subject">
                                 <mat-error>Subject is required</mat-error>
                             </mat-form-field>
                         </div>
@@ -42,7 +44,8 @@
                         <div class="text-field">
                             <mat-form-field>
                                 <mat-label>Message</mat-label>
-                                <textarea matMultiline matAutosize type="text"  formControlName="message" matInput placeholder="Enter your message" aria-multiline="true"></textarea>
+                                <textarea type="text" formControlName="message" matInput
+                                          placeholder="Enter your message" aria-multiline="true"></textarea>
                                 <mat-error>Message is required</mat-error>
                             </mat-form-field>
                         </div>
@@ -59,20 +62,68 @@
         </div>
 
         <div class="info">
-            <mat-card>
+            <mat-card class="card-header">
                 <mat-card-header>
-                    <h2>Contact on other channels</h2>
+                <h2>Contact on other channels</h2>
                 </mat-card-header>
-                <mat-card-content class="px-lg-5 pt-0">
-
-                </mat-card-content>
-
-
             </mat-card>
 
             <mat-card>
-                <mat-card-content class="px-lg-5 pt-0">
-                    test
+                <mat-card-content class="info-body">
+
+                    <div class="contact-info-section">
+                        <table>
+                            <tr>
+                                <td rowspan="2">
+                                    <mat-icon color="primary">call</mat-icon>
+                                </td>
+                                <th>
+                                    Call us
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>  Tel +2 3 434 92 69</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <div class="contact-info-section">
+                        <table>
+                            <tr>
+                                <td rowspan="2">
+                                    <mat-icon color="primary">access_time</mat-icon>
+                                </td>
+                                <th>
+                                   Our opening hours
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>  09:00 - 17:00</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                    <div class="contact-info-section">
+
+                        <table>
+                            <tr>
+                                <td rowspan="4"> <mat-icon color="primary">business</mat-icon> </td>
+                                <th>New Crown Service Partners NV/SA</th>
+
+                            </tr>
+                            <tr>
+                                <td>
+                                    Gansbroekstraat 27
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>B-2870 Puurs</td>
+                            </tr>
+                            <tr>
+                                <td>Belgium</td>
+                            </tr>
+                        </table>
+                    </div>
                 </mat-card-content>
 
 
