added side slide navigatino

--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.scss
@@ -90,7 +90,10 @@ div.sub-menu-desktop {
 
   .sub-menu-desktop-description {
     background-color: $main-color;
-    color: white;
+
+    a{
+      color: white !important;
+    }
   }
 
   .sub-menu-desktop-content {
