--- a/src/app/pages/products/product-list-page/product-list-page.component.html
+++ b/src/app/pages/products/product-list-page/product-list-page.component.html
@@ -5,6 +5,8 @@
             <h1 *ngIf="!isCrownBaelePage()">Third-party products</h1>
         </div>
     </div>
+
+    <app-slide-side-navigation></app-slide-side-navigation>
     <div class="products">
       <div class="header">
         <h2>Please select a part for more information</h2>
