--- a/src/app/components/navigation/desktop-navbar/desktop-navbar.component.html
+++ b/src/app/components/navigation/desktop-navbar/desktop-navbar.component.html
@@ -4,7 +4,7 @@
         <ul>
             <li><a routerLink="/home" (click)="navigate()">Home</a></li>
             <li *ngFor="let link of links">
-                <a *ngIf="link.path" [routerLink]="link.path"> {{link.text}} </a>
+                <a *ngIf="link.path && !link.children" [routerLink]="link.path"> {{link.text}} </a>
                 <a *ngIf="link.children" [ngClass]="{'selected': (link === chosenLink) && subMenuOpen}"
                    (click)="toggleSubMenu(link)"> {{link.text}} </a>
             </li>
@@ -14,10 +14,10 @@
         </ul>
     </div>
 
-    <div *ngIf="chosenLink && !chosenLink.path && chosenLink.children" class="sub-menu-desktop"
+    <div *ngIf="chosenLink && chosenLink.children" class="sub-menu-desktop"
          [ngClass]="{'open': subMenuOpen}">
         <div class="sub-menu-desktop-description">
-            <p>{{chosenLink.text}}</p>
+            <a [routerLink]="chosenLink.path">{{chosenLink.text}}</a>
         </div>
 
         <div class="sub-menu-desktop-content">
