made component generic

--- a/src/app/components/slide-side-navigation/slide-side-navigation.component.html
+++ b/src/app/components/slide-side-navigation/slide-side-navigation.component.html
@@ -14,21 +14,22 @@
 
   <div [ngClass]="{'open': open}" class="content">
 
-    <h2>Crown-Baele</h2>
-      <ul>
-        <li><a>Parts</a></li>
-        <li><a>Upgrades</a></li>
-        <li><a>Add-ons</a></li>
-        <li><a>Services</a></li>
-      </ul>
+    <ng-content></ng-content>
+    <!--<h2>Crown-Baele</h2>-->
+      <!--<ul>-->
+        <!--<li><a>Parts</a></li>-->
+        <!--<li><a>Upgrades</a></li>-->
+        <!--<li><a>Add-ons</a></li>-->
+        <!--<li><a>Services</a></li>-->
+      <!--</ul>-->
 
-    <h2>Third party</h2>
-    <ul>
-      <li><a>Parts</a></li>
-      <li><a>Upgrades</a></li>
-      <li><a>Add-ons</a></li>
-      <li><a>Services</a></li>
-    </ul>
+    <!--<h2>Third party</h2>-->
+    <!--<ul>-->
+      <!--<li><a>Parts</a></li>-->
+      <!--<li><a>Upgrades</a></li>-->
+      <!--<li><a>Add-ons</a></li>-->
+      <!--<li><a>Services</a></li>-->
+    <!--</ul>-->
 
   </div>
 
