--- a/src/app/pages/products/product-list-page/product-list-page.component.scss
+++ b/src/app/pages/products/product-list-page/product-list-page.component.scss
@@ -1,76 +1,95 @@
 @import "../../../../assets/variables";
+
 #product-list {
-    margin-top: $nav-bar-height;
-    .banner{
-        background: url("../../../../assets/images/people.jpg") center top;
+  margin-top: $nav-bar-height;
+  .banner {
+    background: url("../../../../assets/images/people.jpg") center top;
+  }
+
+  ::ng-deep app-slide-side-navigation {
+    a {
+      cursor: pointer;
     }
-    .products {
-        padding: 0 20px 20px 20px;
-        h2 {
-            color: $main-color;
-        }
-        .header {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            @media screen and (max-width: 768px){
-                flex-direction: column;
-                justify-content: flex-start;
-                align-items: flex-start;
-            }
-            .search {
-                @media screen and (max-width: 768px) {
-                    margin-bottom: 20px;
-                    width: 100%;
-                }
-
-                display: flex;
-                flex-direction: row;
-                .input {
-                    i {
-                        font-size: 30px;
-                    }
-
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                }
-                input {
-                    width: 300px;
-                    @media screen and (max-width: 768px) {
-                        flex-grow: 1;
-                        flex-shrink: 0;
-                    }
-                    font-size: 15px;
-                    border: none;
-                    border-bottom: 1px solid $footer-color;
-                    margin-left: 15px;
-                    &:focus {
-                        outline: none;
-                        border-bottom: 2px solid $main-color;
-                    }
-                }
-                /*button {
-                    margin-left: 20px;
-                    flex-shrink: 0;
-                }*/
-            }
-        }
-
-        .content {
-            @media screen and (max-width: 768px) {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                flex-wrap: wrap;
-            }
-            @media screen and (min-width: 768px) {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-around;
-                flex-wrap: wrap;
-            }
-        }
+    ul {
+      padding: 0;
+      list-style: none;
+      li {
+        padding: 10px 0;
+      }
     }
+    h2 {
+      font-size: 15px;
+      color: $main-color;
+    }
+  }
+
+  .products {
+    padding: 0 20px 20px 20px;
+    h2 {
+      color: $main-color;
+    }
+    .header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
+      .search {
+        @media screen and (max-width: 768px) {
+          margin-bottom: 20px;
+          width: 100%;
+        }
+
+        display: flex;
+        flex-direction: row;
+        .input {
+          i {
+            font-size: 30px;
+          }
+
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+        }
+        input {
+          width: 300px;
+          @media screen and (max-width: 768px) {
+            flex-grow: 1;
+            flex-shrink: 0;
+          }
+          font-size: 15px;
+          border: none;
+          border-bottom: 1px solid $footer-color;
+          margin-left: 15px;
+          &:focus {
+            outline: none;
+            border-bottom: 2px solid $main-color;
+          }
+        }
+        /*button {
+            margin-left: 20px;
+            flex-shrink: 0;
+        }*/
+      }
+    }
+
+    .content {
+      @media screen and (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+      }
+      @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+      }
+    }
+  }
 }
