--- a/src/app/components/products/product/product.component.scss
+++ b/src/app/components/products/product/product.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/variables";
+@import "../../../../assets/variables";
 .product-container {
     width: 100%;
     max-width: 300px;
