--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -6,6 +6,7 @@ $footer-color: #DEDFE2;
 $card-background-color: #F7F8F9;
 $nav-bar-height: 125px;
 $nav-bar-color: #999997;
+$light-grey: #F5F5F5;
 
 $font-size-extra-large: 2.5em;
 $font-size-large: 1.6em;
