--- a/src/app/pages/solutions/our-solutions-page.component.html
+++ b/src/app/pages/solutions/our-solutions-page.component.html
@@ -1,3 +1,109 @@
-<p>
-  our-solutions-page works!
-</p>
+<section id="solutions">
+  <div class="banner">
+    <div class="content">
+      <h1>Our solutions</h1>
+    </div>
+  </div>
+  <div class="solutions-content">
+    <div class="solutions-types">
+      <h1>Discover our solutions</h1>
+      <div class="solutions">
+        <div class="type">
+          <h2>Bottle washers</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+            lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
+            malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
+            pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
+          <a href="#">
+            <button class="orange-button">Read more</button>
+          </a>
+        </div>
+        <div class="type">
+          <h2>Bottle washers</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+            lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
+            malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
+            pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
+          <a href="#">
+            <button class="orange-button">Read more</button>
+          </a>
+        </div>
+        <div class="type">
+          <h2>Bottle washers</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+            lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
+            malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
+            pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
+          <a routerLink="#">
+            <button class="orange-button">Read more</button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="triangle"></div>
+    <div class="benefits">
+      <div class="benefit">
+        <div class="content">
+          <img src="../../../assets/images/beer_bottles_liten.jpg" />
+          <div class="info">
+            <h2>This is a benefit</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+              lectus tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="triangle reversed"></div>
+      <div class="benefit reversed">
+        <div class="content">
+          <img src="../../../assets/images/beer_bottles_liten.jpg" />
+          <div class="info">
+            <h2>This is a benefit</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+              lectus tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="triangle"></div>
+      <div class="benefit">
+        <div class="content">
+          <img src="../../../assets/images/beer_bottles_liten.jpg" />
+          <div class="info">
+            <h2>This is a benefit</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+              lectus tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="triangle reversed"></div>
+      <div class="benefit reversed">
+        <div class="content">
+          <img src="../../../assets/images/beer_bottles_liten.jpg" />
+          <div class="info">
+            <h2>This is a benefit</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+              lectus tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="triangle"></div>
+      <div class="benefit">
+        <div class="content">
+          <img src="../../../assets/images/beer_bottles_liten.jpg" />
+          <div class="info">
+            <h2>This is a benefit</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
+              Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
+              lectus tellus.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
