--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,3 +79,10 @@ h2 {
   box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
   outline: none;
 }
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 40px 100vw 0 0;
+}
