solutions list page

--- a/src/app/pages/solutions/our-solutions-page.component.html
+++ b/src/app/pages/solutions/our-solutions-page.component.html
@@ -15,29 +15,29 @@
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a href="#">
+          <a routerLink="bottlewashers">
             <button class="orange-button">Read more</button>
           </a>
         </div>
         <div class="type">
-          <h2>Bottle washers</h2>
+          <h2>Filters</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a href="#">
+          <a routerLink="filters">
             <button class="orange-button">Read more</button>
           </a>
         </div>
         <div class="type">
-          <h2>Bottle washers</h2>
+          <h2>Other machines</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu volutpat urna, at ultrices magna.
             Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum quis
             lectus tellus. Quisque vel hendrerit nisl. Praesent non felis non mauris suscipit vestibulum. Morbi
             malesuada velit eget nulla feugiat, ut blandit metus ultricies. Nam egestas porta metus, a ornare nibh
             pulvinar a. Nulla at mi ac augue tincidunt dictum eu eget metus.</p>
-          <a routerLink="#">
+          <a routerLink="others">
             <button class="orange-button">Read more</button>
           </a>
         </div>
