--- a/src/app/pages/solutions/our-solutions-page.component.scss
+++ b/src/app/pages/solutions/our-solutions-page.component.scss
@@ -8,7 +8,8 @@
     .solutions-content {
         background-color: white;
         h1 {
-            margin-top: 0;
+            margin-top: 0px;
+            margin-bottom: 5px;
             padding-top: 10px;
             padding-left: 20px;
             padding-right: 20px;
@@ -105,6 +106,7 @@
                     }
 
                     img {
+                        box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
                         height: 200px;
                         border-radius: 5px;
                         @media screen and (min-width: 768px) {
