--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,6 +78,9 @@ h2 {
   align-items: center;
   box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
   outline: none;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .triangle {
