--- a/src/app/components/solution/solution.component.scss
+++ b/src/app/components/solution/solution.component.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     margin-bottom: 30px;
     transition: all .2s ease-in-out;
+    
+    a {
+        text-decoration: none;
+    }
 
     &:hover {
         transform: scale(1.025);
