--- a/src/app/components/products/product-detail/product-detail.component.scss
+++ b/src/app/components/products/product-detail/product-detail.component.scss
@@ -52,6 +52,7 @@
                 img {
                     width: 100%;
                     border-radius: 2.5px;
+                    box-shadow: 7px 7px 21px -5px rgba(0, 0, 0, 0.75);
                     :before {
                         content: '';
                         position: absolute;
