--- a/src/app/pages/solutions/solution-details-page/solution-details-page.component.scss
+++ b/src/app/pages/solutions/solution-details-page/solution-details-page.component.scss
@@ -56,6 +56,13 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
+            @media screen and (min-width: 768px) {
+                app-product {
+                    margin-left: 10px;
+                    margin-right: 10px;
+                }
+            }
+
             @media screen and (max-width: 768px) {
                 flex-direction: column;
                 align-items: center;
