--- a/src/app/pages/products/product-list-page/product-list-page.component.scss
+++ b/src/app/pages/products/product-list-page/product-list-page.component.scss
@@ -87,7 +87,7 @@
       @media screen and (min-width: 768px) {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: center;
         flex-wrap: wrap;
       }
     }
