--- a/src/app/pages/products/product-group-page/product-group.page.html
+++ b/src/app/pages/products/product-group-page/product-group.page.html
@@ -9,7 +9,7 @@
       <div class="content">
         <h1>Crown-Baele machines</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
-        <a routerLink="crown-baele" class="more">
+        <a routerLink="/products/crown-baele" class="more">
           <button class="orange-button">
           <span>Discover Crown-Baele products</span>
           <i class="material-icons">keyboard_arrow_right</i>
@@ -21,7 +21,7 @@
       <div class="content">
         <h1>Discover 3rd party machine</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum ut neque sed tempor. Praesent in orci sit amet odio viverra dictum vitae ac ex. Proin nibh felis, dignissim at malesuada condimentum, dapibus at nibh. Nunc molestie convallis risus, vitae bibendum elit tincidunt et. Integer mattis tortor ac porta mollis. Mauris quis ante sem. Maecenas mi risus, scelerisque elementum est vel, dictum rutrum ex. Morbi eget risus congue, molestie nisl vel, bibendum nisl. Ut feugiat erat vel erat venenatis rutrum. Proin lobortis mauris non fermentum volutpat.</p>
-        <a routerLink="third-party" class="more">
+        <a routerLink="/products/third-party" class="more">
           <button class="orange-button">
             <i class="material-icons">keyboard_arrow_left</i>
             <span>Discover 3rd party products</span>
@@ -33,4 +33,4 @@
   </div>
 </section>
 
-<!--<app-product-detail product=""></app-product-detail>-->
+<!--<app-product-card-group-page-detail product-card-group-page=""></app-product-card-group-page-detail>-->
