--- a/src/app/pages/products/product-types/product-list-page/product-list.page.html
+++ b/src/app/pages/products/product-types/product-list-page/product-list.page.html
@@ -1,32 +1,10 @@
 <section id="product-list">
     <div class="banner">
         <div class="content">
-            <h1 *ngIf="isCrownBaelePage()">Crown-Baele products</h1>
-            <h1 *ngIf="!isCrownBaelePage()">Third-party products</h1>
+            <h1 *ngIf="isCrownBaelePage()">Crown-Baele parts</h1>
+            <h1 *ngIf="!isCrownBaelePage()">Third-party parts</h1>
         </div>
     </div>
-
-    <app-slide-side-navigation>
-        <div class="slide-nav-content">
-            <h2>Crown-Baele</h2>
-            <ul>
-                <li><a>Parts</a></li>
-                <li><a>Upgrades</a></li>
-                <li><a>Add-ons</a></li>
-                <li><a>Services</a></li>
-            </ul>
-
-            <h2>Third party</h2>
-            <ul>
-                <li><a>Parts</a></li>
-                <li><a>Upgrades</a></li>
-                <li><a>Add-ons</a></li>
-                <li><a>Services</a></li>
-            </ul>
-        </div>
-    </app-slide-side-navigation>
-
-    <!--<router-outlet name="product-category"></router-outlet>-->
 
     <div class="products">
         <div class="header">
