added solution nav

--- a/src/app/pages/products/product-types/product-type.page.html
+++ b/src/app/pages/products/product-types/product-type.page.html
@@ -3,18 +3,18 @@
         <div class="slide-nav-content">
             <h2>Crown-Baele</h2>
             <ul>
-                <li><a routerLink="parts">Parts</a></li>
-                <li><a routerLink="upgrades">Upgrades</a></li>
-                <li><a routerLink="add-ons">Add-ons</a></li>
-                <li><a routerLink="services">Services</a></li>
+                <li><a routerLink="/products/crown-baele/parts">Parts</a></li>
+                <li><a routerLink="/products/crown-baele/upgrades">Upgrades</a></li>
+                <li><a routerLink="/products/crown-baele/add-ons">Add-ons</a></li>
+                <li><a routerLink="/products/crown-baele/services">Services</a></li>
             </ul>
 
             <h2>Third party</h2>
             <ul>
-                <li><a routerLink="parts">Parts</a></li>
-                <li><a routerLink="upgrades">Upgrades</a></li>
-                <li><a routerLink="add-ons">Add-ons</a></li>
-                <li><a routerLink="services">Services</a></li>
+                <li><a routerLink="/products/third-party/parts">Parts</a></li>
+                <li><a routerLink="/products/third-party/upgrades">Upgrades</a></li>
+                <li><a routerLink="/products/third-party/add-ons">Add-ons</a></li>
+                <li><a routerLink="/products/third-party/services">Services</a></li>
             </ul>
         </div>
     </app-slide-side-navigation>
